# gridBench

./: .gitignore  README.md  pyproject.toml
docs/: schema.md
notebooks/: PORT-STATUS.md
notebooks/basin-typology/: 00-dominant-basin-atlas.py  README.md  RESULT-2026-07-16-dominant-basin-atlas.md
notebooks/fingerprint-metrics/: 00-bits-and-palette.py
notebooks/goal-geometry/: 00-fig3-benchmark.py  01-untwisted-drift-surfaces.py  02-corner-goal-case-study.py  03-drift-vs-switching-cost.py  04-triangle-inequality-violation.py  05-segmentation-switch-points.py  06-wrap-mds-cylinder.py  07-twist-mds-wormholes.py  08-weighted-coverage-fingerprint.py  09-switching-cost-conjecture.py  10-twist-prior-specialisation.py  11-beta-screen-harvest.py  12-flat-world-ps-decompose.py  13-attractor-placement-catchment.py  14-seed-strips-four-label.py  15-saturation-plane.py  16-gen0-tail-plane.py  17-moat-experiment.py  18-silencing-screen.py
notebooks/paper-homing/: 21-fingerprint-planes.py
notebooks/relabelling-actions/: .gitignore  README.md  figure-1-simplified.ipynb  figure-2-simplified.ipynb  figure-5-env-survey.ipynb  figure-6.ipynb  figure_support.py  ga_report_helpers.py  paper-refs.json  wrap_grid_helpers.py
notebooks/single-label-reach/: 00-four-rooms-reach-exemplar.py  01-reach-by-class-two-shapes.py  README.md  RESULT-2026-07-16-four-rooms-exemplar.md
notebooks/twist-generation/: 00-compare-initialiser-footprints.py  README.md  RESULT-2026-07-16-initialiser-footprints.md
scripts/: augment_fingerprint_cache_v7.py
src/gridbench/: __init__.py  clims.py  store.py  (+4 more)
(+75 files in other folders)
