[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gridbench"
version = "0.1.0"
description = "Analysis benches over gridcore environments (gridFour analysis code, ported)"
requires-python = ">=3.11"
# gridcore is also required at runtime (local editable install from
# /media/merlin/phd-marlyn/gridCore; not on PyPI, so not listed here).
dependencies = [
    "numpy",
    "pyarrow",
]

[tool.setuptools.packages.find]
where = ["src"]
